@@ -139,6 +139,20 @@ public:
 					, const size_t winSize
 					, const size_t minRangeLength ) const;
 
+
+	/**
+	 * Decomposes a given range list into subranges that contain only positions
+	 * where the position-wise unpaired probability is above a given threshold,
+	 * since any interaction site enclosing this positions has a lower
+	 * probability.
+	 *
+	 * @param ranges INOUT the list of ranges to decompose
+	 * @param minPu the minimal unpaired probability threshold
+	 * @param RT the relative temperature to be used for Boltzmann weight computation
+	 */
+	void
+	decomposeByMinPu( IndexRangeList & ranges, const size_t minPu, const E_type RT ) const;
+
 protected:
 
 	//! the RNA sequence the accessibilities correspond to
